user login base
base strutture for login part, and base check in order to understand how EditText variable works.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,21 +10,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HCIproject">
         <activity
-            android:name=".MainActivity5"
+            android:name=".MainActivity6"
             android:exported="false"
             android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name=".MainActivity5"
+            android:exported="false"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".MainActivity4"
             android:exported="false"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".MainActivity3"
             android:exported="false"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".MainActivity2"
             android:exported="false"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
