inserito i commenti per spiegare quanto fatto fino ad ora

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,3 +41,6 @@
     </application>
 
 </manifest>
+
+    <!-- quando vogliamo inserire la freccetta per tornare alla pagina precedente ci basta inserire questa riga e specificare la pagina precedente -->
+    <!-- android:parentActivityName=".MainActivity" -->
