--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             android:exported="false"
             android:parentActivityName=".MainActivity" />
         <activity
-            android:name=".MainActivity5"
+            android:name=".TimerPage"
             android:exported="false"
             android:parentActivityName=".MainActivity" />
         <activity
