--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,34 +12,42 @@
         <activity
             android:name=".TimerPage"
             android:exported="false"
+            android:label="TimerPage"
             android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".ChangeUsernamePage"
             android:exported="false"
+            android:label="UserOptionPage"
             android:parentActivityName=".UserPage" />
         <activity
             android:name=".ChangePasswordPage"
             android:exported="false"
+            android:label="UserOptionPage"
             android:parentActivityName=".UserPage" />
         <activity
             android:name=".UserPage"
             android:exported="false"
+            android:label="UserPage"
             android:parentActivityName=".MainActivity" />
         <activity
-            android:name=".MainActivity5"
+            android:name=".AddFoodPage"
             android:exported="false"
+            android:label="AddFoodPage"
+            android:parentActivityName=".FoodPage" />
+        <activity
+            android:name=".WorkoutPage"
+            android:exported="false"
+            android:label="WorkoutPage"
             android:parentActivityName=".MainActivity" />
         <activity
-            android:name=".MainActivity4"
+            android:name=".FoodPage"
             android:exported="false"
+            android:label="FoodPage"
             android:parentActivityName=".MainActivity" />
         <activity
-            android:name=".MainActivity3"
+            android:name=".DiaryPage"
             android:exported="false"
-            android:parentActivityName=".MainActivity" />
-        <activity
-            android:name=".MainActivity2"
-            android:exported="false"
+            android:label="DiaryPage"
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".MainActivity"
