--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HCIproject">
         <activity
-            android:name=".UpdateWorkoutPage"
+            android:name=".UpdateExercisePage"
             android:exported="false"
-            android:label="UpdateWorkoutPage"
-            android:parentActivityName=".WorkoutPage"/>
+            android:label="UpdateExercisePage"
+            android:parentActivityName=".ExercisePage"/>
         <activity
-            android:name=".AddWorkoutPage"
+            android:name=".AddExercisePage"
             android:exported="false"
-            android:label="AddWorkoutPage"
-            android:parentActivityName=".WorkoutPage" />
+            android:label="AddExercisePage"
+            android:parentActivityName=".ExercisePage" />
         <activity
             android:name=".UpdateFoodPage"
             android:exported="false"
@@ -50,9 +50,9 @@
             android:label="AddFoodPage"
             android:parentActivityName=".FoodPage" />
         <activity
-            android:name=".WorkoutPage"
+            android:name=".ExercisePage"
             android:exported="false"
-            android:label="WorkoutPage"
+            android:label="ExercisePage"
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".FoodPage"
