aggiunta dei goals e delle funzionalità per cambiarli

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HCIproject">
         <activity
+            android:name=".ChangeGoalsPage"
+            android:exported="false" />
+        <activity
             android:name=".SignupPage"
             android:exported="false" />
         <activity
@@ -46,11 +49,6 @@
             android:name=".TimerPage"
             android:exported="false"
             android:label="TimerPage" /> <!-- android:parentActivityName=".MainActivity" -->
-        <activity
-            android:name=".ChangeUsernamePage"
-            android:exported="false"
-            android:label="UserOptionPage"
-            android:parentActivityName=".UserPage" />
         <activity
             android:name=".ChangePasswordPage"
             android:exported="false"
