--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,11 @@ plugins {
     id 'com.android.application'
 }
 
+apply plugin: 'com.android.application'
+dependencies {
+    implementation 'com.google.android.gms:play-services-auth:20.2.0'
+}
+
 android {
     compileSdk 32
 
@@ -43,4 +48,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
